[gd_scene load_steps=5 format=3 uid="uid://cq812dnwdhe4a"]

[ext_resource type="Script" path="res://addons/websocket/WebSocket.gd" id="1_m4l6d"]
[ext_resource type="Script" path="res://Router.gd" id="2_iwqda"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="3_evg5q"]

[sub_resource type="GDScript" id="GDScript_8q66t"]
script/source = "extends Node


# Called when the node enters the scene tree for the first time.
func _ready():
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	pass



"

[node name="World" type="Node"]
script = SubResource("GDScript_8q66t")

[node name="WebSocket" type="Node" parent="."]
script = ExtResource("1_m4l6d")
receive_limit = 1
host = "127.0.0.1:8081"
route = "/ws?format=json"
use_WSS = false
autoconnect_mode = 1

[node name="Router" type="Node" parent="."]
script = ExtResource("2_iwqda")

[node name="UI" type="Control" parent="."]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -199.0
offset_right = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("3_evg5q")

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logs" type="RichTextLabel" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="received" from="WebSocket" to="Router" method="_on_web_socket_received"]
[connection signal="energy_payload" from="Router" to="UI" method="_on_router_energy_payload"]
[connection signal="server_info_payload" from="Router" to="UI" method="_on_router_server_info_payload"]
